# common

./: CMakeLists.txt
include/common/: all.h  equality.h  helpers.h  iters.h  queue.h  strings.h
src/: helpers.cpp  strings.cpp
